--- a/less/home-page.less
+++ b/less/home-page.less
@@ -100,6 +100,9 @@
 
       .btn {
         .custom-button(white, @btn-bg-color, 80px);
+        transition-duration:.3s;
+        border:1px solid transparent;
+
         &:hover{
           background-color: @btn-bg-color-hover;
           color:@btn-bg-color;
